New example with handles added.

--- a/examples/tamex/index.html
+++ b/examples/tamex/index.html
@@ -20,6 +20,12 @@
                         Cyclic polling is also included.
                     </p>
                 </li>
+                 <li><a href="handles/index.html">Handles</a>
+                    <p>
+                        Almost the same as the Basic Example, but with other variables and
+                        using handles to access them.
+                    </p>
+                </li>
                 <li><a href="array/index.html">Arrays</a>
                     <p>
                         An example for reading and writing arrays.
