Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p><strong>Current version: V4.0 final</strong></p>
+          <p><strong>Current version: V4.0.1 final</strong></p>
 
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
 
-<p>TAME is JavaScript library created for an easy and comfortable access to the TwinCAT ADS WebService. The name is an acronym for „TwinCAT ADS Made Easy“ and stands also for „taming“ the complexity of ADS and AJAX requests. Originally a „wast product“ from the programming of a browser based visualisation for my home, it has become a (in my opinion) useful little piece of software and I hope it will help others who want to develop their own visualisations.</p>
+<p>TAME is JavaScript library created for an easy and comfortable access to the TwinCAT ADS WebService. The name is an acronym for „TwinCAT ADS Made Easy“ and stands also for „taming“ the complexity of ADS and AJAX requests. Originally a „wast product“ from the programming of a browser based visualization for my home, it has become a (in my opinion) useful little piece of software and I hope it will help others who want to develop their own visualizations.</p>
 
 <p>The reason for V4 is that synchronous XMLHttpRequests in the main thread are depricated and browsers will stop supporting them one day. See <a href="https://xhr.spec.whatwg.org/">here</a> for more details. In V3.x synchronous requests were internally used for fetching the symbol and data type information from the PLC while instancing the client. Switching to asynchronous requests makes things a little bit more complicated. You have to start your scripts with the new "onReady" function.</p>
 
@@ -136,7 +136,7 @@ structures and arrays and also internal variables and parameters of FB's is poss
 <h2>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h2>
 
-<p>Requried is a running ADS WebService, look at the <a href="http://infosys.beckhoff.com">Beckhoff Infosys</a> for more information about the installation. And a TwinCAT PLC of course. ;-)</p>
+<p>Required is a running ADS WebService, look at the <a href="http://infosys.beckhoff.com">Beckhoff Infosys</a> for more information about the installation. And a TwinCAT PLC of course. ;-)</p>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
