Add complete SVG example

--- a/examples/tamex/index.html
+++ b/examples/tamex/index.html
@@ -55,6 +55,12 @@
 						the framework.
                     </p>
                 </li>
+                <li><a href="svg/index.html">Example Using SVG</a>
+                    <p>
+                        Example showing SVG graphics with the vex.js library for input.<br />
+                        SVG created in Inkscape with ID's and exported as "Optimized SVG"<br />
+                    </p>
+                </li>
             </ul>
             
         </div>
